force-app/main/default/objects/Beat_Visit__c/Beat_Visit__c.object-meta.xml
<CustomObject>
    <label>Beat Visit</label>
    <pluralLabel>Beat Visits</pluralLabel>
    <description>Beat Visit</description>
    <nameField>
        <label>Beat Visit Name</label>
        <type>AutoNumber</type>
        <displayFormat>BVIS-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>