force-app/main/default/objects/Beat_Visit__c/fields/Beat__c.field-meta.xml
<CustomField>
    <fullName>Beat__c</fullName>
    <label>Beat</label>
    <type>Lookup</type>
    <referenceTo>Beat__c</referenceTo>
    <relationshipLabel>Beat Visits</relationshipLabel>
    <relationshipName>Beat_Visits</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Beat</description>
</CustomField>