force-app/main/default/objects/Beat_Visit__c/fields/Outlet__c.field-meta.xml
<CustomField>
    <fullName>Outlet__c</fullName>
    <label>Outlet</label>
    <type>Lookup</type>
    <referenceTo>Outlet__c</referenceTo>
    <relationshipLabel>Beat Visits</relationshipLabel>
    <relationshipName>Outlet_Beat_Visits</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Outlet</description>
</CustomField>