force-app/main/default/objects/Beat_Visit__c/fields/Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Visit_Date__c</fullName>
    <label>Visit Date</label>
    <type>Date</type>
    <description>Visit Date</description>
</CustomField>